force-app/main/default/objects/Sub_Proposal__c/Sub_Proposal__c.object-meta.xml
<CustomObject>
    <label>Sub Proposal</label>
    <nameField>
        <displayFormat>SP-{000000000}</displayFormat>
        <label>Sub Proposal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub Proposals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>