force-app/main/default/objects/Sub_Proposal__c/fields/Funding_Priority__c.field-meta.xml
<CustomField>
    <fullName>Funding_Priority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Category 1, is dictated by the area within the University that will control the spending.</inlineHelpText>
    <label>Funding Priority</label>
    <referenceTo>ucinn_ascendv2__Work_Plan_Unit__c</referenceTo>
    <relationshipLabel>Sub Proposals</relationshipLabel>
    <relationshipName>Sub_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>