force-app/main/default/objects/Sub_Proposal__c/fields/Funding_Priority_Tree__c.field-meta.xml
<CustomField>
    <fullName>Funding_Priority_Tree__c</fullName>
    <label>Funding Priority Tree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>