force-app/main/default/objects/Sub_Proposal__c/fields/Planned_Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>Planned_Gift_Type__c</fullName>
    <label>Planned Gift Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
                <label>Bequest</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Charitable Remainder Trust</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Donor Advised Fund</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Life Insurance</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Qualified IRA Distribution</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Charitable Gift Annuity</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Outside Trust</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Retirement Plan</label>
            </value>
            <value>
                <fullName>PG Type 1</fullName>
                <isActive>false</isActive>
                <label>PG Type 1</label>
            </value>
            <value>
                <fullName>PG Type 2</fullName>
                <isActive>false</isActive>
                <label>PG Type 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>