force-app/main/default/objects/Sub_Proposal__c/fields/PRM__c.field-meta.xml
<CustomField>
    <fullName>PRM__c</fullName>
    <formula>Opportunity__r.Account.ucinn_ascendv2__PRM__r.FirstName &amp;&quot; &quot;&amp; Opportunity__r.Account.ucinn_ascendv2__PRM__r.LastName</formula>
    <label>PRM</label>
    <type>Text</type>
</CustomField>