force-app/main/default/objects/Sub_Proposal__c/fields/sfl_load_process_id__c.field-meta.xml
<CustomField>
    <fullName>sfl_load_process_id__c</fullName>
    <label>sfl_load_process_id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>