force-app/main/default/objects/Sub_Proposal__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <label>Endowed</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Expendable</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Grant</label>
            </value>
            <value>
                <fullName>PG</fullName>
                <label>Planned Gift</label>
            </value>
            <value>
                <fullName>GIK</fullName>
                <label>Gift In Kind</label>
            </value>
            <value>
                <fullName>Leadership Gift</fullName>
                <isActive>false</isActive>
                <label>Leadership Gift</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>