force-app/main/default/objects/Sub_Proposal__c/validationRules/Planned_Gift_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Planned_Gift_Type</fullName>
    <active>false</active>
    <description>When Type = Planned Gift, the Planned Gift Type is required</description>
    <errorConditionFormula>NOT(ISBLANK(TEXT(Type__c))) &amp;&amp; 
ISBLANK(TEXT(Planned_Gift_Type__c))</errorConditionFormula>
    <errorMessage>When Type = Planned Gift, the Planned Gift Type is required</errorMessage>
</ValidationRule>