force-app/main/default/objects/Sub_Proposal__c/validationRules/Restrict_Editing_Booked_Proposals.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Editing_Booked_Proposals</fullName>
    <active>true</active>
    <description>Sub-Proposals of Proposals that are in the Booked Stage should not be editable by users.</description>
    <errorConditionFormula>AND(

NOT(ISNEW()),
Opportunity__r.ND_RecordType_DeveloperName__c = &quot;Proposal&quot;,
ISPICKVAL( Opportunity__r.StageName, &apos;Booked&apos;),

NOT(OR(

$Profile.Name = &quot;System Administrator&quot;, 
$Permission.Edit_Booked_Proposal,
$User.ND_Bypass_Duplicate_Rules__c = TRUE)

)

)</errorConditionFormula>
    <errorMessage>Users are not able to update Proposals once they are Booked.</errorMessage>
</ValidationRule>